--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,7 +7,7 @@ nixPkgs = ['prometheus-redis-exporter']
 # cmds = ['yarn run server:build']
 
 [start]
-cmd = './redis_exporter'
+cmd = 'redis_exporter'
 
 [variables]
 PORT = "9121"
